--- a/larvae_growth_2015.Rmd
+++ b/larvae_growth_2015.Rmd
@@ -17,7 +17,6 @@ http://rcompanion.org/rcompanion/d_07.html
 library(dplyr) #data frame grouping
 library(nlme) #LMMs, using likelihood ratio test for significance
 library(plotrix)#for SE calculation
-#library(multcompView)
 library(ggplot2)
 library(lme4) #for linear mixed models
 library(afex) #different way for getting significance from LMMs
@@ -33,97 +32,38 @@ Summarizing sizes at different time points.
 ```{r}
 G1.all.mean <- summarise(G1.all,mean.Area = mean(Area, na.rm = T),se.Area = std.error(Area,na.rm =T),mean.Length = mean(Average_Length, na.rm = T),se.Length = std.error(Average_Length,na.rm =T))
 G1.all.mean
+G1.all.mean$Date <- c(0,14,7,0,14,7,0,14,7)
 ```
-# Day 1
-Plotting size distributions at Day 1.
-```{r}
-p.Day1 <- ggplot(filter(G1.all,Date == "7-1-15"), aes(x=Population, y=Area,fill=Population)) + 
-  geom_violin(trim=FALSE) + scale_fill_manual(values=c("#999999", "#E69F00", "#56B4E9")) + geom_boxplot(width=0.1,fill="white") + labs(title="Area Day 1",y="Area (mm^2)")
-p.Day1
-
-p.Day1.L <- ggplot(filter(G1.all,Date == "7-1-15"), aes(x=Population, y=Average_Length,fill=Population)) + 
-  geom_violin(trim=FALSE) + scale_fill_manual(values=c("#999999", "#E69F00", "#56B4E9")) + geom_boxplot(width=0.1,fill="white") + labs(title="Length Day 1",y="Length (mm)")
-p.Day1.L
-```
-Checking for normal distributions in Area at each time point.
-```{r}
-plot(density(filter(G1.all,Date=="7-1-15",Population=="SS")$Area,na.rm = T),col="#56B4E9", main ="Day 1 distributions")
-lines(density(filter(G1.all,Date=="7-1-15",Population=="HC")$Area,na.rm = T),col="#999999")
-lines(density(filter(G1.all,Date=="7-1-15",Population=="NF")$Area,na.rm = T),col="#E69F00")
-
-shapiro.test(filter(G1.all,Date=="7-1-15",Population=="SS")$Area)
-shapiro.test(filter(G1.all,Date=="7-1-15",Population=="HC")$Area)
-shapiro.test(filter(G1.all,Date=="7-1-15",Population=="NF")$Area)
-
-plot(density(filter(G1.all,Date=="7-8-15",Population=="SS")$Area,na.rm = T),col="#56B4E9", main ="Day 7 distributions",xlim=c(0.009,0.03),ylim=c(0,200))
-lines(density(filter(G1.all,Date=="7-8-15",Population=="HC")$Area,na.rm = T),col="#999999")
-lines(density(filter(G1.all,Date=="7-8-15",Population=="NF")$Area,na.rm = T),col="#E69F00")
-
-shapiro.test(filter(G1.all,Date=="7-8-15",Population=="SS")$Area)
-shapiro.test(filter(G1.all,Date=="7-8-15",Population=="HC")$Area)
-shapiro.test(filter(G1.all,Date=="7-8-15",Population=="NF")$Area)
-
-plot(density(filter(G1.all,Date=="7-15-15",Population=="SS")$Area,na.rm = T),col="#56B4E9", main ="Day 14 distributions",xlim =c(0.009,0.045))
-lines(density(filter(G1.all,Date=="7-15-15",Population=="HC")$Area,na.rm = T),col="#999999")
-lines(density(filter(G1.all,Date=="7-15-15",Population=="NF")$Area,na.rm = T),col="#E69F00")
-
-shapiro.test(filter(G1.all,Date=="7-15-15",Population=="SS")$Area)
-shapiro.test(filter(G1.all,Date=="7-15-15",Population=="HC")$Area)
-shapiro.test(filter(G1.all,Date=="7-15-15",Population=="NF")$Area)
-```
-Shell area in SS and NF at Day 14 does not have a normal distribution. 
-
+# Length  
+## Checking for normal distribution  
 Checking for normal distributions in Length at each time point.
-```{r}
-plot(density(filter(G1.all,Date=="7-1-15",Population=="SS")$Average_Length,na.rm = T),col="#56B4E9", main ="Day 1 distributions", xlim=c(0.11,0.19))
-lines(density(filter(G1.all,Date=="7-1-15",Population=="HC")$Average_Length,na.rm = T),col="#999999")
-lines(density(filter(G1.all,Date=="7-1-15",Population=="NF")$Average_Length,na.rm = T),col="#E69F00")
+```{r, echo=FALSE}
+plot(density(filter(G1.all,Date=="7-1-15",Population=="Oyster Bay")$Average_Length,na.rm = T),col="#56B4E9", main ="Day 1 distributions", xlim=c(0.11,0.19))
+lines(density(filter(G1.all,Date=="7-1-15",Population=="Dabob Bay")$Average_Length,na.rm = T),col="#999999")
+lines(density(filter(G1.all,Date=="7-1-15",Population=="Fidalgo Bay")$Average_Length,na.rm = T),col="#E69F00")
 
-shapiro.test(filter(G1.all,Date=="7-1-15",Population=="SS")$Average_Length)
-shapiro.test(filter(G1.all,Date=="7-1-15",Population=="HC")$Average_Length)
-shapiro.test(filter(G1.all,Date=="7-1-15",Population=="NF")$Average_Length)
+shapiro.test(filter(G1.all,Date=="7-1-15",Population=="Oyster Bay")$Average_Length)
+shapiro.test(filter(G1.all,Date=="7-1-15",Population=="Dabob Bay")$Average_Length)
+shapiro.test(filter(G1.all,Date=="7-1-15",Population=="Fidalgo Bay")$Average_Length)
 
-plot(density(filter(G1.all,Date=="7-8-15",Population=="SS")$Average_Length,na.rm = T),col="#56B4E9", main ="Day 7 distributions",xlim=c(0.12,0.21),ylim=c(0,50))
-lines(density(filter(G1.all,Date=="7-8-15",Population=="HC")$Average_Length,na.rm = T),col="#999999")
-lines(density(filter(G1.all,Date=="7-8-15",Population=="NF")$Average_Length,na.rm = T),col="#E69F00")
+plot(density(filter(G1.all,Date=="7-8-15",Population=="Oyster Bay")$Average_Length,na.rm = T),col="#56B4E9", main ="Day 7 distributions",xlim=c(0.12,0.21),ylim=c(0,50))
+lines(density(filter(G1.all,Date=="7-8-15",Population=="Dabob Bay")$Average_Length,na.rm = T),col="#999999")
+lines(density(filter(G1.all,Date=="7-8-15",Population=="Fidalgo Bay")$Average_Length,na.rm = T),col="#E69F00")
 
-shapiro.test(filter(G1.all,Date=="7-8-15",Population=="SS")$Average_Length)
-shapiro.test(filter(G1.all,Date=="7-8-15",Population=="HC")$Average_Length)
-shapiro.test(filter(G1.all,Date=="7-8-15",Population=="NF")$Average_Length)
+shapiro.test(filter(G1.all,Date=="7-8-15",Population=="Oyster Bay")$Average_Length)
+shapiro.test(filter(G1.all,Date=="7-8-15",Population=="Dabob Bay")$Average_Length)
+shapiro.test(filter(G1.all,Date=="7-8-15",Population=="Fidalgo Bay")$Average_Length)
 
-plot(density(filter(G1.all,Date=="7-15-15",Population=="SS")$Average_Length,na.rm = T),col="#56B4E9",main ="Day 14 distributions",xlim =c(0.12,0.25))
-lines(density(filter(G1.all,Date=="7-15-15",Population=="HC")$Average_Length,na.rm = T),col="#999999")
-lines(density(filter(G1.all,Date=="7-15-15",Population=="NF")$Average_Length,na.rm = T),col="#E69F00")
+plot(density(filter(G1.all,Date=="7-15-15",Population=="Oyster Bay")$Average_Length,na.rm = T),col="#56B4E9",main ="Day 14 distributions",xlim =c(0.12,0.25))
+lines(density(filter(G1.all,Date=="7-15-15",Population=="Dabob Bay")$Average_Length,na.rm = T),col="#999999")
+lines(density(filter(G1.all,Date=="7-15-15",Population=="Fidalgo Bay")$Average_Length,na.rm = T),col="#E69F00")
 
-shapiro.test(filter(G1.all,Date=="7-15-15",Population=="SS")$Average_Length)
-shapiro.test(filter(G1.all,Date=="7-15-15",Population=="HC")$Average_Length)
-shapiro.test(filter(G1.all,Date=="7-15-15",Population=="NF")$Average_Length)
+shapiro.test(filter(G1.all,Date=="7-15-15",Population=="Oyster Bay")$Average_Length)
+shapiro.test(filter(G1.all,Date=="7-15-15",Population=="Dabob Bay")$Average_Length)
+shapiro.test(filter(G1.all,Date=="7-15-15",Population=="Fidalgo Bay")$Average_Length)
 ```
-# Plotting Size through time
+## Plotting Size through time  
 ```{r}
-G1.all.mean$Date <- c(1,14,7,1,14,7,1,14,7)
-Fig.Area <- ggplot(G1.all.mean, aes(x=Date, y=mean.Area, group=Population)) +
-  geom_errorbar(aes(ymin=G1.all.mean$mean.Area-G1.all.mean$se.Area,ymax=G1.all.mean$mean.Area+G1.all.mean$se.Area,color=Population), width=.07) +
-  geom_line(aes(color=Population) ,size = 0.5) +   
-  geom_point(aes(shape=Population,color=Population), size = 3)+
-  xlab("Days") +scale_x_continuous(breaks=c(1,7,14))+
-  ylab(expression(paste("Shell Area (mm^2)"))) +
-  theme_bw() + #Set the background color
-  theme(axis.text.x = element_text(vjust = 1, hjust=1, size = 12), #Set the text angle
-        axis.line = element_line(color = 'black'), #Set the axes color
-        panel.border = element_blank(), #Set the border
-        panel.grid.major = element_blank(), #Set the major gridlines
-        panel.grid.minor = element_blank(), #Set the minor gridlines
-        plot.background=element_blank(),  #Set the plot background
-        legend.key = element_blank(),  #remove legend background
-        legend.position=c(.2, .7)) + #set legend location
-  ggtitle("Larvae Shell Area") +
-  theme(plot.title = element_text(face = 'bold', 
-                                  size = 14, 
-                                  hjust = 0))
-Fig.Area <- Fig.Area + scale_color_manual(values=c("#999999", "#E69F00", "#56B4E9"))
-Fig.Area
-
 Fig.L <- ggplot(G1.all.mean, aes(x=Date, y=mean.Length, group=Population)) +
   geom_errorbar(aes(ymin=G1.all.mean$mean.Length-G1.all.mean$se.Length,ymax=G1.all.mean$mean.Length+G1.all.mean$se.Length,color=Population), width=.07) +
   geom_line(aes(color=Population) ,size = 0.5) +   
@@ -147,22 +87,147 @@ Fig.L <- Fig.L + scale_color_manual(values=c("#999999", "#E69F00", "#56B4E9"))
 Fig.L
 ```
 
-# Testing for differences in size  
+## Testing for differences in size   
+
+### Day 0   
+Plotting size distributions at Day 0.
+```{r}
+p.Day1.L <- ggplot(filter(G1.all,Date == "7-1-15"), aes(x=Population, y=Average_Length,fill=Population)) + 
+  geom_violin(trim=FALSE) + scale_fill_manual(values=c("#999999", "#E69F00", "#56B4E9")) + geom_boxplot(width=0.1,fill="white") + labs(title="Length Day 0",y="Length (mm)")
+p.Day1.L
+```
 ANOVA of size at Day 1 to test if size differs accross populations at Day 1
 ```{r}
 G1.D1 <- filter(G1.all, Date == "7-1-15")
 area.D1 <- aov(Area ~ Population, data=G1.D1) #test the hypothesis relative size does not differ between treatments on Day 1
-area.D1.res <- anova(area.D1)
-area.D1.res
+summary(area.D1)
 
 length.D1 <- aov(Average_Length ~ Population, data=G1.D1) #test the hypothesis relative size does not differ between treatments on Day 1
-length.D1.res <- anova(length.D1)
-length.D1.res
+summary(length.D1)
 ```
-## Day 7
-Untransformed shell area.
+```{r}
+pairwise.t.test(G1.D1$Average_Length,G1.D1$Population,p.adjust.method = "bonferroni")
+t.test(filter(G1.D1,Population == "Dabob Bay")$Average_Length,filter(G1.D1,Population == "Fidalgo Bay")$Average_Length)
+```
+```{r}
+area.D1 <- aov(Average_Length ~ Population, data=G1.D1) 
+summary(area.D1)
+TukeyHSD(area.D1)
+```
+### Day 7  
+Untransformed shell length, Day 7.
 ```{r}
 G1.D7 <- filter(G1.all, Date == "7-8-15")
+length.D7.model = lmer(Average_Length ~ Population + (1|Replicate),data=G1.D7,na.action = na.omit)
+summary(length.D7.model)
+area.null <- lmer(Average_Length ~ (1|Replicate),data=G1.D7,REML=FALSE)
+area.model.R <- lmer(Average_Length ~ Population + (1|Replicate),data=G1.D7,REML = F)
+anova(area.null,area.model.R)
+afex.1 <- mixed(Average_Length ~ Population + (1|Replicate), data=G1.D7,na.action = na.omit)
+print(afex.1)
+```
+```{r}
+pairwise.t.test(G1.D7$Average_Length,G1.D7$Population,p.adjust.method = "bonferroni")
+```
+```{r}
+area.D1 <- aov(Average_Length ~ Population, data=G1.D7) 
+summary(area.D1)
+TukeyHSD(area.D1)
+```
+
+### Day 14  
+Day 14 untransformed shell length:
+```{r}
+G1.D14 <- filter(G1.all, Date == "7-15-15")
+relarea.D14.model = lmer(Average_Length ~ Population + (1|Replicate), data=G1.D14,na.action = na.omit)
+summary(relarea.D14.model)
+relarea.null <- lmer(Average_Length ~ (1|Replicate),data=G1.D14,REML=FALSE)
+relarea.model.R <- lmer(Average_Length ~ Population + (1|Replicate), data=G1.D14,REML = FALSE)
+anova(relarea.null,relarea.model.R)
+
+afex.1 <- mixed(Average_Length~ Population + (1|Replicate), data=G1.D14,na.action = na.omit)
+print(afex.1)
+```
+```{r}
+pairwise.t.test(G1.D14$Average_Length,G1.D14$Population,p.adjust.method = "bonferroni")
+```
+```{r}
+area.D1 <- aov(Average_Length ~ Population, data=G1.D14) 
+summary(area.D1)
+TukeyHSD(area.D1)
+```
+
+# Area  
+## Checking for normal distribution
+Checking for normal distributions in Area at each time point.
+```{r}
+plot(density(filter(G1.all,Date=="7-1-15",Population=="Oyster Bay")$Area,na.rm = T),col="#56B4E9", main ="Day 1 distributions")
+lines(density(filter(G1.all,Date=="7-1-15",Population=="Dabob Bay")$Area,na.rm = T),col="#999999")
+lines(density(filter(G1.all,Date=="7-1-15",Population=="Fidalgo Bay")$Area,na.rm = T),col="#E69F00")
+
+shapiro.test(filter(G1.all,Date=="7-1-15",Population=="Oyster Bay")$Area)
+shapiro.test(filter(G1.all,Date=="7-1-15",Population=="Dabob Bay")$Area)
+shapiro.test(filter(G1.all,Date=="7-1-15",Population=="Fidalgo Bay")$Area)
+```
+```{r,echo=FALSE}
+plot(density(filter(G1.all,Date=="7-8-15",Population=="Oyster Bay")$Area,na.rm = T),col="#56B4E9", main ="Day 7 distributions",xlim=c(0.009,0.03),ylim=c(0,200))
+lines(density(filter(G1.all,Date=="7-8-15",Population=="Dabob Bay")$Area,na.rm = T),col="#999999")
+lines(density(filter(G1.all,Date=="7-8-15",Population=="Fidalgo Bay")$Area,na.rm = T),col="#E69F00")
+
+shapiro.test(filter(G1.all,Date=="7-8-15",Population=="Oyster Bay")$Area)
+shapiro.test(filter(G1.all,Date=="7-8-15",Population=="Dabob Bay")$Area)
+shapiro.test(filter(G1.all,Date=="7-8-15",Population=="Fidalgo Bay")$Area)
+
+plot(density(filter(G1.all,Date=="7-15-15",Population=="Oyster Bay")$Area,na.rm = T),col="#56B4E9", main ="Day 14 distributions",xlim =c(0.009,0.045))
+lines(density(filter(G1.all,Date=="7-15-15",Population=="Dabob Bay")$Area,na.rm = T),col="#999999")
+lines(density(filter(G1.all,Date=="7-15-15",Population=="Fidalgo Bay")$Area,na.rm = T),col="#E69F00")
+
+shapiro.test(filter(G1.all,Date=="7-15-15",Population=="Oyster Bay")$Area)
+shapiro.test(filter(G1.all,Date=="7-15-15",Population=="Dabob Bay")$Area)
+shapiro.test(filter(G1.all,Date=="7-15-15",Population=="Fidalgo Bay")$Area)
+```
+## Plotting through time
+```{r}
+Fig.Area <- ggplot(G1.all.mean, aes(x=Date, y=mean.Area, group=Population)) +
+  geom_errorbar(aes(ymin=G1.all.mean$mean.Area-G1.all.mean$se.Area,ymax=G1.all.mean$mean.Area+G1.all.mean$se.Area,color=Population), width=.07) +
+  geom_line(aes(color=Population) ,size = 0.5) +   
+  geom_point(aes(shape=Population,color=Population), size = 3)+
+  xlab("Days") +scale_x_continuous(breaks=c(1,7,14))+
+  ylab(expression(paste("Shell Area (mm^2)"))) +
+  theme_bw() + #Set the background color
+  theme(axis.text.x = element_text(vjust = 1, hjust=1, size = 12), #Set the text angle
+        axis.line = element_line(color = 'black'), #Set the axes color
+        panel.border = element_blank(), #Set the border
+        panel.grid.major = element_blank(), #Set the major gridlines
+        panel.grid.minor = element_blank(), #Set the minor gridlines
+        plot.background=element_blank(),  #Set the plot background
+        legend.key = element_blank(),  #remove legend background
+        legend.position=c(.2, .7)) + #set legend location
+  ggtitle("Larvae Shell Area") +
+  theme(plot.title = element_text(face = 'bold', 
+                                  size = 14, 
+                                  hjust = 0))
+Fig.Area <- Fig.Area + scale_color_manual(values=c("#999999", "#E69F00", "#56B4E9"))
+Fig.Area
+```
+
+## Testing for differences in area  
+
+### Day 1  
+```{r}
+p.Day1 <- ggplot(filter(G1.all,Date == "7-1-15"), aes(x=Population, y=Area,fill=Population)) + 
+  geom_violin(trim=FALSE) + scale_fill_manual(values=c("#999999", "#E69F00", "#56B4E9")) + geom_boxplot(width=0.1,fill="white") + labs(title="Area Day 1",y="Area (mm^2)")
+p.Day1
+```
+
+```{r}
+posthoc.kruskal.nemenyi.test(G1.D1$Area,as.factor(G1.D1$Population),dist="Chisquare")
+pairwise.t.test(G1.D1$Area,G1.D1$Population,p.adjust.method = "bonferroni")
+```
+
+### Day 7
+Untransformed shell area.
+```{r}
 area.D7.model = lmer(Area ~ Population + (1|Replicate),data=G1.D7,na.action = na.omit)
 summary(area.D7.model)
 area.null <- lmer(Area ~ (1|Replicate),data=G1.D7,REML=FALSE)
@@ -183,29 +248,17 @@ anova(area.null,area.model.R)
 afex.1 <- mixed(log10(Area) ~ Population + (1|Replicate), data=G1.D7,na.action = na.omit)
 print(afex.1)
 ```
-Untransformed shell length, Day 7.
 ```{r}
-length.D7.model = lmer(Average_Length ~ Population + (1|Replicate),data=G1.D7,na.action = na.omit)
-summary(length.D7.model)
-area.null <- lmer(Average_Length ~ (1|Replicate),data=G1.D7,REML=FALSE)
-area.model.R <- lmer(Average_Length ~ Population + (1|Replicate),data=G1.D7,REML = F)
-anova(area.null,area.model.R)
-afex.1 <- mixed(Average_Length ~ Population + (1|Replicate), data=G1.D7,na.action = na.omit)
-print(afex.1)
+posthoc.kruskal.nemenyi.test(G1.D7$Area,as.factor(G1.D7$Population),dist="Chisquare")
+pairwise.t.test(G1.D7$Area,G1.D7$Population,p.adjust.method = "bonferroni")
 ```
-Log-transformed shell length, Day 7.
 ```{r}
-Larea.D7.model = lmer(log10(Average_Length) ~ Population + (1|Replicate),data=G1.D7,na.action = na.omit)
-summary(Larea.D7.model)
-area.null <- lmer(log10(Average_Length) ~ (1|Replicate),data=G1.D7,REML=FALSE)
-area.model.R <- lmer(log10(Average_Length) ~ Population + (1|Replicate),data=G1.D7,REML = F)
-anova(area.null,area.model.R)
-
-afex.1 <- mixed(log10(Average_Length) ~ Population + (1|Replicate), data=G1.D7,na.action = na.omit)
-print(afex.1)
+#Showing anova gives same result
+area.D7 <- aov(Area ~ Population, data=G1.D7) #test the hypothesis relative size does not differ between treatments on Day 1
+summary(area.D7)
+TukeyHSD(area.D7)
 ```
-
-## Day 14
+### Day 14
 Untransformed Day 14 shell area
 ```{r}
 G1.D14 <- filter(G1.all, Date == "7-15-15")
@@ -229,78 +282,36 @@ anova(relarea.null,relarea.model.R)
 afex.1 <- mixed(log10(Area) ~ Population + (1|Replicate), data=G1.D14,na.action = na.omit)
 print(afex.1)
 ```
-
-Day 14 untransformed shell length:
+Kruskal-Wallis tests with Nemenyi post-hoc tests. Used when data is non-normal, which only occured in Day 14 shell area
 ```{r}
-G1.D14 <- filter(G1.all, Date == "7-15-15")
-relarea.D14.model = lmer(Average_Length ~ Population + (1|Replicate), data=G1.D14,na.action = na.omit)
-summary(relarea.D14.model)
-relarea.null <- lmer(Average_Length ~ (1|Replicate),data=G1.D14,REML=FALSE)
-relarea.model.R <- lmer(Average_Length ~ Population + (1|Replicate), data=G1.D14,REML = FALSE)
-anova(relarea.null,relarea.model.R)
-
-afex.1 <- mixed(Average_Length~ Population + (1|Replicate), data=G1.D14,na.action = na.omit)
-print(afex.1)
-```
-Log-transformed shell length, Day 14.
-```{r}
-Lrelarea.D14.model = lmer(log10(Average_Length) ~ Population + (1|Replicate),data=G1.D14,na.action = na.omit)
-summary(Lrelarea.D14.model)
-relarea.null <- lmer(log10(Average_Length) ~ (1|Replicate),data=G1.D14,REML=FALSE)
-relarea.model.R <- lmer(log10(Average_Length) ~ Population + (1|Replicate),data=G1.D14,REML = FALSE)
-anova(relarea.null,relarea.model.R)
-
-afex.1 <- mixed(log10(Average_Length)~ Population + (1|Replicate), data=G1.D14,na.action = na.omit)
-print(afex.1)
-```
-
-Kruskal-Wallis tests with Nemenyi post-hoc tests. Used when data is non-normal, which only occured in Day 14 shell area.
-```{r}
-#Shell area
-posthoc.kruskal.nemenyi.test(G1.D1$Area,as.factor(G1.D1$Population),dist="Chisquare")
-posthoc.kruskal.nemenyi.test(G1.D7$Area,as.factor(G1.D7$Population),dist="Chisquare")
 posthoc.kruskal.nemenyi.test(G1.D14$Area,as.factor(G1.D14$Population),dist="Chisquare")
-```
-Pairwise t-test with bonferroni correction. Only appropriate for Day 1 and Day 7
-```{r}
-pairwise.t.test(G1.D1$Area,G1.D1$Population,p.adjust.method = "bonferroni")
-pairwise.t.test(G1.D7$Area,G1.D7$Population,p.adjust.method = "bonferroni")
 pairwise.t.test(G1.D14$Area,G1.D14$Population,p.adjust.method = "bonferroni")
+pairwise.t.test(log10(G1.D14$Area),G1.D14$Population,p.adjust.method = "bonferroni")
 ```
-Shell Length tests
-```{r}
-posthoc.kruskal.nemenyi.test(G1.D1$Average_Length,as.factor(G1.D1$Population),dist="Chisquare")
-posthoc.kruskal.nemenyi.test(G1.D7$Average_Length,as.factor(G1.D7$Population),dist="Chisquare")
-posthoc.kruskal.nemenyi.test(G1.D14$Average_Length,as.factor(G1.D14$Population),dist="Chisquare")
-```
-```{r}
-pairwise.t.test(G1.D1$Average_Length,G1.D1$Population,p.adjust.method = "bonferroni")
-pairwise.t.test(G1.D7$Average_Length,G1.D7$Population,p.adjust.method = "bonferroni")
-pairwise.t.test(G1.D14$Average_Length,G1.D14$Population,p.adjust.method = "bonferroni")
-```
+
 # Using Relative Area and Length
 Calculating shell area means at Day 1 for normalizations. This could be used is shell size varied significantly at Day 1. We did not observe this, but size did differ slightly between HC and NF/SS. 
 ```{r}
 means.A <- summarise(G1.all, mean.area = mean(Area, na.rm = TRUE), mean.length = mean(Average_Length))
-mean.A.HC <- subset(means.A,Population =="HC" &Date=="7-1-15",select=mean.area) #subset mean area for day 1 HC
-mean.A.SS <- subset(means.A,Population =="SS"&Date=="7-1-15",select=mean.area) #subset mean area for day 1 SS
-mean.A.NF <- subset(means.A,Population =="NF"&Date=="7-1-15",select=mean.area) #subset mean area for day 1 NF
+mean.A.HC <- subset(means.A,Population =="Dabob Bay" &Date=="7-1-15",select=mean.area) #subset mean area for day 1 HC
+mean.A.SS <- subset(means.A,Population =="Oyster Bay"&Date=="7-1-15",select=mean.area) #subset mean area for day 1 SS
+mean.A.NF <- subset(means.A,Population =="Fidalgo Bay"&Date=="7-1-15",select=mean.area) #subset mean area for day 1 NF
 
-mean.L.HC <- subset(means.A,Population =="HC" &Date=="7-1-15",select=mean.length) #subset mean area for day 1 HC
-mean.L.SS <- subset(means.A,Population =="SS"&Date=="7-1-15",select=mean.length) #subset mean area for day 1 SS
-mean.L.NF <- subset(means.A,Population =="NF"&Date=="7-1-15",select=mean.length) #subset mean area for day 1 NF
+mean.L.HC <- subset(means.A,Population =="Dabob Bay" &Date=="7-1-15",select=mean.length) #subset mean area for day 1 HC
+mean.L.SS <- subset(means.A,Population =="Oyster Bay"&Date=="7-1-15",select=mean.length) #subset mean area for day 1 SS
+mean.L.NF <- subset(means.A,Population =="Fidalgo Bay"&Date=="7-1-15",select=mean.length) #subset mean area for day 1 NF
 ```
 ```{r}
 A.norms <- function(x) {  #write function
-  if(x == "HC") y <- mean.A.HC #if Treatment equals Ambient assign day 1 Ambient mean as normalization factor
-  if(x == "SS") y <- mean.A.SS #if Treatment equals Ambient assign day 1 Ambient mean as normalization factor
-  if(x == "NF") y <- mean.A.NF #if Treatment equals Ambient assign day 1 Ambient mean as normalization factor
+  if(x == "Dabob Bay") y <- mean.A.HC #if Treatment equals Ambient assign day 1 Ambient mean as normalization factor
+  if(x == "Oyster Bay") y <- mean.A.SS #if Treatment equals Ambient assign day 1 Ambient mean as normalization factor
+  if(x == "Fidalgo Bay") y <- mean.A.NF #if Treatment equals Ambient assign day 1 Ambient mean as normalization factor
   return(y) #return result
 }
 L.norms <- function(x) {  #write function
-  if(x == "HC") y <- mean.L.HC #if Treatment equals Ambient assign day 1 Ambient mean as normalization factor
-  if(x == "SS") y <- mean.L.SS #if Treatment equals Ambient assign day 1 Ambient mean as normalization factor
-  if(x == "NF") y <- mean.L.NF #if Treatment equals Ambient assign day 1 Ambient mean as normalization factor
+  if(x == "Dabob Bay") y <- mean.L.HC #if Treatment equals Ambient assign day 1 Ambient mean as normalization factor
+  if(x == "Oyster Bay") y <- mean.L.SS #if Treatment equals Ambient assign day 1 Ambient mean as normalization factor
+  if(x == "Fidalgo Bay") y <- mean.L.NF #if Treatment equals Ambient assign day 1 Ambient mean as normalization factor
   return(y) #return result
 }
 G1.all$A.norm <- as.numeric(sapply(G1.all$Population,A.norms))
