--- a/10666645qcdxnrsmhkgr/Oly_larval.bib
+++ b/10666645qcdxnrsmhkgr/Oly_larval.bib
@@ -316,7 +316,7 @@
   year      =  1994
 }
 
-@MISC{Baums2008-od,
+@ARTICLE{Baums2008-od,
   title   = "A restoration genetics guide for coral reef conservation",
   author  = "Baums, Iliana B",
   journal = "Molecular Ecology",
