--- a/10666645qcdxnrsmhkgr/main.tex
+++ b/10666645qcdxnrsmhkgr/main.tex
@@ -2,7 +2,7 @@
 \usepackage{float}
 \usepackage{gensymb}
 
-\title{Consistent differences in fitness traits across multiple generations of Olympia oysters)}
+\title{Consistent differences in fitness traits across multiple generations of Olympia oysters}
 
 \author[1,*]{Katherine E. Silliman}
 \author[1]{Tynan K. Bowyer}
@@ -34,8 +34,8 @@ Although both of these studies controlled for environmental exposure of broodsto
 
 \section*{Results}
 \subsection*{Reproductive Activity}
-The timing and quantity of larvae produced varied across the three populations (Fig. 1) The cumulative number of larvae produced over a 7 week period differed significantly among population (one-way ANOVA, Df = 2, F = 4.174, \textit{p} = 0.0421), with F1 oysters from Fidalgo producing the fewest (Fig. 2A). Combined across all replicates, Oyster Bay oysters produced 2.7 million larvae, Dabob oysters produced 2.4 million, and Fidalgo oysters produced 1.1 million.\par
-The onset of larval release also differed significantly among populations (one-way ANOVA, Df = 2, F = 4.033, \textit{p} = 0.0457), with Fidalgo oysters exhibiting delayed reproduction compared to the other populations and much higher variance in the date of initial larval release (Fig. 2B). The timing of peak larval production did not vary significantly among populations (ANOVA, Df = 2, F = 0.097, \textit{p} = 0.908).
+The timing and quantity of larvae produced varied across the three populations (Fig. 1) The cumulative number of larvae produced over a 7 week period differed significantly among population (one-way ANOVA, Df = 2, F = 4.174, \textit{p} = 0.0421), with F1 oysters from Fidalgo producing the fewest (Fig. 2a). Combined across all replicates, Oyster Bay oysters produced 2.7 million larvae, Dabob oysters produced 2.4 million, and Fidalgo oysters produced 1.1 million.\par
+The onset of larval release also differed significantly among populations (one-way ANOVA, Df = 2, F = 4.033, \textit{p} = 0.0457), with Fidalgo oysters exhibiting delayed reproduction compared to the other populations and much higher variance in the date of initial larval release (Fig. 2b). The timing of peak larval production did not vary significantly among populations (ANOVA, Df = 2, F = 0.097, \textit{p} = 0.908).
 
 \begin{figure}[H]
 \centering
@@ -46,8 +46,8 @@ The onset of larval release also differed significantly among populations (one-w
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.8\linewidth]{Cum_1stDay_Comb_PS2015_color}
-\caption{A: Cumulative number of larvae released within each replicate bucket over 7 weeks, normalized by the number of oysters in each bucket. Oysters from Fidalgo produced significantly fewer than those from Oyster Bay (Tukey post hoc test, \textit{p} = 0.0499) and fewer, although not significantly, than those from Dabob (Tukey post hoc test, \textit{p} = 0.0954). B: Calendar day of first observed larvae release. Fidalgo oysters released larvae 10 days later than Oyster Bay oysters (Tukey post hoc test, \textit{p} = 0.0434) and 7 days later than Dabob oysters on average, although this was not statistically significant (Tukey post hoc test, \textit{p} = 0.156).}
+\includegraphics[width=0.8\linewidth]{Cum_1stDay_Comb_PS2015_color.jpeg}
+\caption{\textbf{a}: Cumulative number of larvae released within each replicate bucket over 7 weeks, normalized by the number of oysters in each bucket. Oysters from Fidalgo produced significantly fewer than those from Oyster Bay (Tukey post hoc test, \textit{p} = 0.0499) and fewer, although not significantly, than those from Dabob (Tukey post hoc test, \textit{p} = 0.0954). \textbf{b}: Calendar day of first observed larvae release. Fidalgo oysters released larvae 10 days later than Oyster Bay oysters (Tukey post hoc test, \textit{p} = 0.0434) and 7 days later than Dabob oysters on average, although this was not statistically significant (Tukey post hoc test, \textit{p} = 0.156).}
 \label{fig:Figure 2}
 \end{figure}
 
@@ -56,7 +56,7 @@ Significant differences in larvae size were not detected among populations on Da
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.7\linewidth]{Larvae_Length_Line_PS215_color.png}
+\includegraphics[width=0.7\linewidth]{Larvae_Length_Line_PS215_color.jpeg}
 \caption{Larval shell length of F2 oysters from three populations over 14 days. Data are means across replicates += s.e.m. Size varied significantly among populations at Day 7 (LMM,\textit{p} = 7.939e\textsuperscript{-5}) and Day 14 (LMM, \textit{p} = 0.03573).}
 \label{fig:Figure 3}
 \end{figure}
@@ -99,7 +99,7 @@ Linear mixed models (LMMs) were used to measure the effect of source population 
 For the juvenile experiment, growth was tracked on an individual basis (growth rate = $\Delta$area/\# days). All oysters that were alive (as determined by a healthy shell color and response to prodding) and not extending >50\% off the tile at each time point were measured for shell area. For the linear mixed model, population was a fixed effect and tray containing the tile was a random effect. Growth rate was natural log-transformed based on indications of non-normal distributions from the Shapiro-Wilkes test. Pairwise comparisons for populations at each time point were performed with the Nemenyi post hoc test using information from the Kruskal-Wallis test (\textit{PMCMR} package)\cite{Pohlert2014-lr}.
 
 \subsection*{Data and Code Availability}
-Raw data and reproducible R Markdown notebooks detailing the code used for statistical analyses can be found at www.github.com/ksil91/PS-Oly-Larvae-Growth. Raw data will also be stored on figshare following publication acceptance.
+The datasets generated during current study are available on figshare [following publication acceptance]. Reproducible R Markdown notebooks detailing the code used for statistical analyses can be found at www.github.com/ksil91/PS-Oly-Larvae-Growth.
 
 \bibliography{Oly_larval}
 
