--- a/10666645qcdxnrsmhkgr/main.tex
+++ b/10666645qcdxnrsmhkgr/main.tex
@@ -105,7 +105,7 @@ The datasets generated during current study are available on figshare [following
 
 \section*{Acknowledgements}
 
-We thank Puget Sound Restoration Fund for providing facilities, equipment, and help with animal husbandry during these experiments and the NOAA Manchester Research Station for allowing us to deploy equipment off of their dock. We also thank Brent Vadopalas, Catherine Pfister, and Jay Dimond for helpful comments on earlier drafts. This work was funded in part by a grant from Washington Sea Grant, University of Washington, pursuant to National Oceanic and Atmospheric Administration Award No. NA10OAR4170057. The views expressed herein are those of the authors and do not necessarily reflect the views of NOAA or any of its sub-agencies.
+We thank Puget Sound Restoration Fund for providing facilities, equipment, and help with animal husbandry during these experiments and the NOAA Manchester Research Station for allowing us to deploy equipment off of their dock. We also thank Brent Vadopalas, Catherine Pfister, and Jay Dimond for helpful comments on earlier drafts. This material is based upon work supported by the National Science Foundation Graduate Research Fellowship under Grant No. 1545870. This work was funded in part by a grant from Washington Sea Grant, University of Washington, pursuant to National Oceanic and Atmospheric Administration Award No. NA10OAR4170057. The views expressed herein are those of the authors and do not necessarily reflect the views of NOAA or any of its sub-agencies.
 
 \section*{Author contributions statement}
 
